--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "jquery": "^3.6.0"
+        "bootstrap-vue": "^2.21.2",
+        "element-ui": "^2.15.6",
+        "jquery": "^3.6.0",
+        "laravel-vue-pagination": "^2.3.1",
+        "sweetalert": "^2.1.2",
+        "vue-router": "^3.5.3",
+        "vue-sweetalert2": "^5.0.2"
     }
 }
